--- a/app/assets/stylesheets/products.scss
+++ b/app/assets/stylesheets/products.scss
@@ -51,3 +51,39 @@ img {
 img {
   border: 0;
 }
+
+.thumbnail {
+  padding:0px;
+}
+.panel {
+  position:relative;
+}
+//
+//.panel>.panel-heading:after,.panel>.panel-heading:before{
+//  position:absolute;
+//  top:11px;left:-16px;
+//  right:100%;
+//  width:0;
+//  height:0;
+//  display:block;
+//  content:" ";
+//  border-color:transparent;
+//  border-style:solid solid outset;
+//  pointer-events:none;
+//}
+//.panel>.panel-heading:after{
+//  border-width:7px;
+//  border-right-color:#f7f7f7;
+//  margin-top:1px;
+//  margin-left:2px;
+//}
+//.panel>.panel-heading:before{
+//  border-right-color:#ddd;
+//  border-width:8px;
+//}
+
+.star-rating {
+  line-height:32px;
+  font-size:1.25em;
+  cursor: pointer;
+}
