--- a/app/views/products/_product.html.erb
+++ b/app/views/products/_product.html.erb
@@ -1,7 +1,10 @@
 <div class="col-sm-2 col-md-4 col-md-offset-1">
   <%= image_tag(product.image_url, class: "thumbnail img-responsive") %>
-  <h1><%= product.name %></h1><%= link_to image_tag("editProduct.png", border: 0), edit_product_path(product) %>
+  <h1><%= product.name %></h1>
   <p><%= product.description %></p>
   <p>Color: <%= product.colour %></p>
   <strong>Price: $ 42</strong>
+  <%= link_to image_tag("showProduct.png", border: 0), product %> |
+  <%= link_to image_tag("editProduct.png", border: 0), edit_product_path(product) %>
+  <!--<%= button_to('Remove3', product, :method => :delete, :class => 'btn btn-large btn-primary')  %>-->
 </div>
