--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -1,68 +1,101 @@
-<p id="notice"><%= notice %></p>
-<br><br>
-<h1>Product</h1>
-<div class="container-fluid">
+<!--<p id="notice"><%= notice %></p>-->
+<br>
+<div class="container">
   <div class="row">
-    <div class="col-sm-2 col-md-4">
-      <h1><%= @product.name %></h1>
-      <p><%= @product.description %></p>
-      <p>Color: <%= @product.colour %></p>
-      <p>First Rating: <%= @product.first_rating %></p>
-      <p>Avg Rating: <%= @product.average_rating %></p>
-      <p>High Rating Comment: <%= @product.highest_rating_comment %></p>
-      <p>Low Rating Comment: <%= @product.lowest_rating_comment %></p>
-      <strong>Product Price: $ 42</strong>
-      <%= image_tag(@product.image_url, class: "img-responsive") %>
+    <div class="col-md-8">
+      <div>
+        <%= image_tag(@product.image_url, class: "img-responsive") %>
+      </div>
+    </div>
+    <div class="col-md-4">
+      <div>
+          <div class="panel panel-default">
+            <div class="panel-heading"><strong><%= @product.name %></strong></div>
+            <div class="panel-body">
+              <p><strong>Description: </strong><%= @product.description %></p>
+              <p><strong>Color: </strong><%= @product.colour %></p>
+              <p><strong>Avg Rating:</strong> <%= @product.average_rating %> Stars</p>
+              <strong>Price: $ 42</strong>
+            </div>
+          </div>
+      </div>
+      <% if !@product.highest_rating_comment.nil? %>
+      <h3>Highest Rating</h3>
+      <div class="panel panel-default">
+        <div class="panel-heading">
+          <strong>
+            <div class="star-rating">
+              <span class="fa fa-star-o" data-rating="1"></span>
+              <span class="fa fa-star-o" data-rating="2"></span>
+              <span class="fa fa-star-o" data-rating="3"></span>
+              <span class="fa fa-star-o" data-rating="4"></span>
+              <span class="fa fa-star-o" data-rating="5"></span>
+              <input type="hidden" name="whatever" class="rating-value" value="3">
+            </div>
+              <%= @product.highest_rating_comment_rating %> Star(s) </strong> <span class="text-muted">John S. Commented <%= @product.highest_rating_comment.how_many_days_ago %> day(s) ago</span>
+        </div>
+        <div class="panel-body">
+          <%= @product.highest_rating_comment.body %>
+        </div><!-- /panel-body -->
+      </div><!-- /panel panel-default -->
+      <% end %>
+
+      <% if !@product.lowest_rating_comment.nil? %>
+      <h3>Lowest Rating</h3>
+      <div class="panel panel-default">
+        <div class="panel-heading">
+          <strong>
+            <div class="star-rating">
+              <span class="fa fa-star-o" data-rating="1"></span>
+              <span class="fa fa-star-o" data-rating="2"></span>
+              <span class="fa fa-star-o" data-rating="3"></span>
+              <span class="fa fa-star-o" data-rating="4"></span>
+              <span class="fa fa-star-o" data-rating="5"></span>
+              <input type="hidden" name="whatever" class="rating-value" value="3">
+            </div>
+              <%= @product.lowest_rating_comment_rating %> Star(s) </strong> <span class="text-muted">Julie S. Commented <%= @product.lowest_rating_comment.how_many_days_ago %> day(s) ago</span>
+        </div>
+        <div class="panel-body">
+          <%= @product.lowest_rating_comment.body %>
+        </div><!-- /panel-body -->
+      </div><!-- /panel panel-default -->
+      <% end %>
     </div>
   </div>
 </div>
 
-<div class="col-sm-12 col-md-6">
-  <div class="list-of-comments">
-    <br>
-    <br>
-    <h3> Highest rating </h3>
-    <p>
-      <%= @product.highest_rating_comment.body%>
-    <div class="rated" data-score="<%= @product.highest_rating_comment.rating %>"></div>
-    </p>
-    <br>
+<div class="container">
+  <% if !@comments.empty? %>
+  <div class="row">
+    <div class="col-sm-12">
+      <h3>All User Comments</h3>
+    </div><!-- /col-sm-12 -->
+  </div><!-- /row -->
 
-    <h3> Lowest rating </h3>
-    <p>
-      <%= @product.lowest_rating_comment.body %>
-    <div class="rated" data-score="<%= @product.lowest_rating_comment.rating %>"></div>
-    </p>
-    <br>
-    <br>
+  <% @comments.each do |comment| %>
+    <div class="row">
+    <div class="col-sm-1">
+      <div class="thumbnail">
+        <%=image_tag("man-1.png", height:"30", width:"30")%>
+      </div><!-- /thumbnail -->
+    </div><!-- /col-sm-1 -->
 
-    <h3> Read all the reviews </h3>
-    <br>
-    <% @comments.each do |comment| %>
-        <div class="product-review">
-          <br>
-          <strong><%= comment.user.first_name %></strong>
-          <small><em><%= "#{time_ago_in_words(comment.created_at)} ago" %></em></small>
-          <!-- space -->
-          &nbsp;
-          <!-- Destroy with admin conditional -->
-          <% if signed_in? && current_user.admin? %>
-              <%= link_to ('<span class="glyphicon glyphicon-remove"></span>').html_safe, product_comment_path(comment.product, comment), method: :delete, data: { confirm: 'Are you sure?' } %>
-          <% end %>
-
-          <!-- Review Core -->
-          <blockquote>
-            <p><%= comment.body %></p>
-            <br>
-            <div class="rated" data-score="<%= comment.rating %>"></div>
-          </blockquote>
-
+    <div class="col-sm-5">
+      <div class="panel panel-default">
+        <div class="panel-heading">
+          <strong><%= comment.rating%> Star(s)</strong> <span class="text-muted">Frank S. Commented <%= comment.how_many_days_ago %> day(s) ago</span>
         </div>
-    <% end %>
-  </div>
-</div><!-- /col -->
+        <div class="panel-body">
+          <%= comment.body%>
+        </div><!-- /panel-body -->
+      </div><!-- /panel panel-default -->
+    </div><!-- /col-sm-5 -->
+  </div><!-- /row -->
+  <% end %>
+  <% end %>
 
+  <%= link_to image_tag("editProduct.png", border: 0), edit_product_path(@product) %> |
+  <%= link_to image_tag("allProducts.png", border: 0), products_path  %> |
+  <%= link_to image_tag("addProduct.png", border: 0), new_product_path %>
+</div><!-- /container -->
 
-<%= link_to image_tag("editProduct.png", border: 0), edit_product_path(@product) %> |
-<%= link_to image_tag("allProducts.png", border: 0), products_path  %> |
-<%= link_to image_tag("addProduct.png", border: 0), new_product_path %>
